--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h1 class='txt-headline mb6-gray'>Northwest US History of Forest Fires</h1>
 
             <h2 class='txt-xl mt18-gray mb12-gray'>About This Map</h2>
-            <p>This map shows all the forest fires for the northwest United States. Within this map the dates are spread from year 1889 to year 2003.</p>
+            <p>This map shows all the forest fires for the northwest United States. Within this map the dates are spread from year 1889 to year 2003. The fire years labeled as '0' stands for null data.</p>
             <footer class='mt12 bg-gray-faint txt-s'>
                 <ul>
                     <li>Explore the raw data at <a target='_blank' class='link' href='https://www.fs.usda.gov/detailfull/r1/landmanagement/gis/?cid=fsp5_030970#2'>United States Department of Agriculture</a></li>
