--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
 
     <!-- include cartodb.js library -->
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <!-- The jquery library has to be used, otherwise without it the entire functionality of the slider will break -->
 
     <script>
         function changeLegend(start, end) {
