--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
     <div id="left" style="float: left; width: 25%;">
-        <div id="scrollBox" style="overflow:scroll; height: 650px; width: 99%;">
+        <div id="scrollBox" style="overflow:scroll; width: 99%;">
             <h1 class='txt-headline mb6-gray'>Northwest United States History of Forest Fires</h1>
             <a target='_blank' href="http://visityellowstonenationalparkyall.weebly.com/uploads/1/9/1/2/19128651/8387985.jpg?1367968566"><img src="YellowstoneFire.jpg"></a>
             <p>- Click <a target='_blank' class='link' href='http://visityellowstonenationalparkyall.weebly.com/succession.html'>here</a> to read about to 1988 Yellowstone National Park Fire and its biological succession.</p>
