--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
             <a target='_blank' href="http://visityellowstonenationalparkyall.weebly.com/uploads/1/9/1/2/19128651/8387985.jpg?1367968566"><img src="YellowstoneFire.jpg"></a>
             <p>- Click <a target='_blank' class='link' href='http://visityellowstonenationalparkyall.weebly.com/succession.html'>here</a> to read about to 1988 Yellowstone National Park Fire and its biological succession.</p>
             <h2 class='txt-xl mt18-gray mb12-gray'>About This Map</h2>
-            <p>This map shows all the forest fires for the northwest United States. The years listed here for forest fires are from 1889 to 2003. Out of all of these fires, the Yellowstone National Park Fire of 1988 has been one of the largest forest fires to scale in this region. Also shown on this map are the locations of all the national parks and national forests within the region of the given fire data.</p>
+            <p>This map shows all the forest fires for the northwest United States. The years listed here for forest fires are from 1889 to 2003. This fire data can be filtered by a year or range of years occurred. Out of all of these fires, the Yellowstone National Park Fire of 1988 has been one of the largest forest fires to scale in this region. Also shown on this map are the locations of all the national parks and national forests within the region of the given fire data. Those layers may be toggled on and off. </p>
             <footer class='mt12 bg-gray-faint txt-s'>
                 <ul>
-                    <li>Explore the raw data at <a target='_blank' class='link' href='https://www.fs.usda.gov/detailfull/r1/landmanagement/gis/?cid=fsp5_030970#2'>United States Department of Agriculture</a></li>
+                    <li>All data was obtained at the <a target='_blank' class='link' href='https://www.fs.usda.gov/detailfull/r1/landmanagement/gis/?cid=stelprd3852570&width=full'>United States Department of Agriculture</a></li>
                     <li>Map authored by <a target='_blank' class='link' href='https://github.com/OwenJeff'>Owen Mickelson</a> on March 13,2017</li>
                 </ul>
             </footer>
