Added more metadata and last minute changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>NW US Forest Fires</title>
+    <title>Northwest United States Forest Fires</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
@@ -135,7 +135,7 @@
             <p>This map shows all the forest fires for the northwest United States. The years listed here for forest fires are from 1889 to 2003. This fire data can be filtered by a year or range of years occurred. Out of all of these fires, the Yellowstone National Park Fire of 1988 has been one of the largest forest fires to scale in this region. Also shown on this map are the locations of all the national parks and national forests within the region of the given fire data. Those layers may be toggled on and off. </p>
             <footer class='mt12 bg-gray-faint txt-s'>
                 <ul>
-                    <li>All data was obtained at the <a target='_blank' class='link' href='https://www.fs.usda.gov/detailfull/r1/landmanagement/gis/?cid=stelprd3852570&width=full'>United States Department of Agriculture</a></li>
+                    <li>All data was obtained at the <a target='_blank' class='link' href='https://www.fs.usda.gov/detailfull/r1/landmanagement/gis/?cid=stelprd3852570&width=full'>United States Department of Agriculture</a> and <a target='_blank' class='link' href='https://catalog.data.gov/dataset/national-park-boundariesf0a4c'>data.gov</a></li>
                     <li>Map authored by <a target='_blank' class='link' href='https://github.com/OwenJeff'>Owen Mickelson</a> on March 13,2017</li>
                 </ul>
             </footer>
@@ -160,7 +160,7 @@
             <li id="abc" style="color:turquoise;">Show Both</li>
             <li id="efg" style="color:green;">National Parks</li>
             <li id="hij" style="color:blue;">National Forests</li>
-            <li id="klm" style="color:black;">Show Neither</li>
+            <li id="klm" style="color:black;">Hide Both</li>
         </ul>
     </div>
 
